--- a/public/index.html
+++ b/public/index.html
@@ -7,8 +7,8 @@
     <div id='main'>
 
 
-      <script src="multiTable.js"></script>
-      <script src="evenOccurrences.js"></script>
+      <script src="../js/evenOccurrences.js"></script>
+      <script src="../js/multiTable.js"></script>
     </div>
   </body>
 </html>
