solved characterFrequency today

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,7 @@
 
       <script src="../js/evenOccurrences.js"></script>
       <script src="../js/multiTable.js"></script>
+      <script src="../js/characterFrequency.js"></script>
     </div>
   </body>
 </html>
