--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
       <script src="../js/evenOccurrences.js"></script>
       <script src="../js/multiTable.js"></script>
       <script src="../js/characterFrequency.js"></script>
+      <script src='../js/commonCharacters.js'></script>
     </div>
   </body>
 </html>
