upload new solved problem: asyncMap

--- a/public/index.html
+++ b/public/index.html
@@ -11,7 +11,7 @@
       <script src="../js/multiTable.js"></script>
       <script src="../js/characterFrequency.js"></script>
       <script src='../js/commonCharacters.js'></script>
-      <script src="../js/characterFrequency.js"></script>
+      <script src="../js/asyncMap.js"></script>
     </div>
   </body>
 </html>
